Fix wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,10 +53,16 @@
 .two-column {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   gap: 10px;
   align-items: center;
 }
+
+@media screen and (max-width: 600px) {
+  .two-column {
+    flex-direction: column;
+  }
+}
+
 
 .legend {
   background-color: white;
